--- a/public/status.html
+++ b/public/status.html
@@ -9,7 +9,7 @@ body {
     align-items: center;
     height: 100vh;
     margin: 0;
-    background-color: #f1f1f1;
+    background-color: #000000;
 }
 
     #logo {
