feat: add swagger, import sorting and router

--- a/public/status.html
+++ b/public/status.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html>
     <head>
-        <title>Formula 1 Web Page</title>
+        <title>f1 team radios!</title>
         <style>
 body {
     display: flex;
